--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+        <link rel="stylesheet" href="./assets/css/reset.css">
 		<link
 			rel="stylesheet"
 			href="./assets/css/styles.css"
